--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: phosg52_development
+  database: psg52_production
   pool: 5
-  username: nguyenngocson0811
-  password: 1251tt1467
+  username: phosaigon52
+  password: aA456321&^%
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
