--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: psg52_production
+  database: psg52_development
   pool: 5
-  username: phosaigon52
-  password: aA456321&^%
+  username: luan
+  password: vkiu
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
