--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: psg52_development
+  database: phosg52_development
   pool: 5
-  username: luan
-  password: vkiu
+  username: nguyenngocson0811
+  password: 1251tt1467
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
