--- a/config/database (copy).yml
+++ b/config/database (copy).yml
@@ -19,8 +19,8 @@ development:
   encoding: unicode
   database: phosg52_development
   pool: 5
-  username: nguyenngocson0811
-  password: 1251tt1467
+  username: hungnt
+  password: 123
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,13 +48,13 @@ test:
   encoding: unicode
   database: phosg52_test
   pool: 5
-  username: nguyenngocson0811
-  password: 1251tt1467
+  username: hungnt
+  password: 123
 
 production:
   adapter: postgresql
   encoding: unicode
   database: phosg52_production
   pool: 5
-  username: nguyenngocson0811
-  password: 1251tt1467
+  username: hungnt
+  password: 123
